src/components/content-components/UpcomingEvents.css
section.upcoming-events {
    display: flex;
    width: 100%;
    max-height: 900px;
    overflow: hidden;
    margin-block-start: var(--padding-inline);
    gap: var(--small-gap);
}

.next-event {
    display: flex;
    background-color: var(--white);
    color: var(--black);
    flex: 2;
}

.next-event-image-container {
    flex: 2;
    overflow: hidden;
}

.next-event-details-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: var(--small-gap);
}

.following-events {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: var(--small-gap);
    
}

.following-event {
    background-color: var(--white);
    color: var(--black);
    display: flex;
    flex-direction: column;
    max-height: 440px;
    position: relative;
}

.following-event-image-container {
    overflow: hidden;
    flex: 1 1 auto;
    display: flex;
}

.following-event-details-container {
    padding: var(--small-gap);
    flex: 0 0 auto;
}

span.tag-shape {
    background-color: var(--accent1);
    padding: 10px 15px;
    align-self: flex-start;
}

.following-event-details-container > span.tag-shape.absolute {
    position: absolute;
    top: 0;
    left: 0;
    height: 45px;
}

.following-event-details-container > button.add-to-calendar-icon {
    background-color: var(--accent1);
    color: var(--black);
    border: none;
    padding: 10px;
    line-height: 0;
    height: 45px;

    position: absolute;
    top: 0;
    right: 0;
}

.following-event-details-container:last-child p {
    margin-bottom: 0;
}

@media (max-width: 1200px) {
    .next-event-details-container {
        justify-content: flex-start;
    }
}

@media (max-width: 1024px) {
    section.upcoming-events {
        flex-direction: column;
        max-height: 100%;
    }

    .following-event {
        flex-direction: row;
        max-height: 100%;
    }

    .following-event-image-container {
        flex: 2;
        overflow: hidden;
    }

    .following-event-details-container {
        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        padding: var(--small-gap);
    }
}

@media (max-width: 768px) {
    .next-event {
        flex-direction: column;
        max-height: 100%;
    }

    .next-event-image-container {
        flex: 1;
    }

    .next-event-details-container {
        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }

    .following-event {
        flex-direction: column;
        max-height: 100%;
    }

    .following-event-image-container {
        flex: 1;
    }

    .following-event-details-container {
        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
}

